# crates/jstz_node/openapi.json
@@ -550,7 +550,7 @@
         ],
         "properties": {
           "address": {
-            "$ref": "#/components/schemas/Address"
+            "$ref": "#/components/schemas/SmartFunctionHash"
           }
         }
       },
@@ -635,7 +635,7 @@
         ],
         "properties": {
           "address": {
-            "$ref": "#/components/schemas/Address"
+            "$ref": "#/components/schemas/SmartFunctionHash"
           },
           "level": {
             "$ref": "#/components/schemas/LogLevel"
